--- a/TrackballScroll/Properties/Resources.resx
+++ b/TrackballScroll/Properties/Resources.resx
@@ -140,13 +140,15 @@
     <value>Prefer vertical/horizontal movement</value>
   </data>
   <data name="TextMessageBoxAbout" xml:space="preserve">
-    <value>TrackballScroll v2.0.1
-Copyright (c) 2016 Martin Seelge
-License: The MIT License
+    <value>TrackballScroll v2.1.1
+Copyright (c) 2016, 2017 Martin Seelge
 Project URL: https://github.com/Seelge/TrackballScroll/
 
 Scroll with your trackball / mouse movement when holding down button 3 or 4.
-See README.md for additional information.</value>
+See README.md for additional information.
+
+License: The MIT License
+https://github.com/Seelge/TrackballScroll/blob/master/LICENSE</value>
   </data>
   <data name="TextTitle" xml:space="preserve">
     <value>TrackballScroll</value>
