--- a/TrackballScroll/Properties/Resources.resx
+++ b/TrackballScroll/Properties/Resources.resx
@@ -140,7 +140,7 @@
     <value>Prefer vertical/horizontal movement</value>
   </data>
   <data name="TextMessageBoxAbout" xml:space="preserve">
-    <value>TrackballScroll v3
+    <value>TrackballScroll v4
 Copyright (c) 2016, 2017 Martin Seelge
 Project URL: https://github.com/Seelge/TrackballScroll/
 
@@ -158,5 +158,8 @@ https://github.com/Seelge/TrackballScroll/blob/master/LICENSE</value>
   </data>
   <data name="TextButtonHookUseX2" xml:space="preserve">
     <value>Use button X2</value>
+  </data>
+  <data name="TextButtonEmulateMiddleButton" xml:space="preserve">
+    <value>Emulate middle button when not scrolling</value>
   </data>
 </root>
