--- a/TrackballScroll/Properties/Resources.resx
+++ b/TrackballScroll/Properties/Resources.resx
@@ -140,8 +140,8 @@
     <value>Prefer vertical/horizontal movement</value>
   </data>
   <data name="TextMessageBoxAbout" xml:space="preserve">
-    <value>TrackballScroll v4
-Copyright (c) 2016, 2017 Martin Seelge
+    <value>TrackballScroll v5
+Copyright (c) 2016-2018 Martin Seelge
 Project URL: https://github.com/Seelge/TrackballScroll/
 
 Scroll with your trackball / mouse movement when holding down button X1 or X2 (typically buttons 3, 4).
